# ats_score_checker

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/endpoints/: analytics.py  auth.py  resumes.py
backend/app/application/interfaces/: resume_repository.py  user_repository.py
backend/app/application/services/: analytics.py  auth.py  resume_scoring.py
backend/app/core/: config.py  logging.py
backend/app/domain/entities/: job_description.py  resume.py  score_card.py  user.py
backend/app/infrastructure/db/: models.py  session.py
backend/app/infrastructure/repositories/: resume_repository.py  user_repository.py
backend/app/infrastructure/security/: auth.py
backend/app/schemas/: analytics.py  auth.py  resume.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 20260129_0001_initial_schema.py
backend/tests/: test_config.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/analytics/: AnalyticsPanel.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  LoginPage.tsx  RegisterPage.tsx  ResumesPage.tsx
frontend/src/services/: analytics.ts  api.ts  auth.ts  resume.ts
frontend/src/store/: auth.ts
frontend/src/types/: analytics.ts  auth.ts  resume.ts  user.ts
frontend/src/validation/: auth.ts  resume.ts
(+9 files in other folders)
