[tool.poetry]
name = "ats-backend"
version = "0.1.0"
description = "Backend service for ATS resume score checker"
authors = ["ATS Team <replace@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.24.0" }
sqlalchemy = "^2.0.23"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg = { extras = ["binary"], version = "^3.1.12" }
pydantic = {extras = ["email"], version = "^2.12.5"}
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.9"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
bcrypt = "<4.1"
redis = "^5.0.1"
celery = "^5.3.4"
loguru = "^0.7.2"
tenacity = "^8.2.3"
httpx = "^0.25.2"
openai = "^1.6.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.7"
mypy = "^1.7.1"
httpx = "^0.25.2"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=app"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["app"]

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
